# xfce-po-translation

./: .gitignore  xdt-i18n
goodies/gsynaptics-mcs-plugin/trunk/: Makefile.am  README  autogen.sh  configure.in.in
goodies/gsynaptics-mcs-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  cs.po  da.po  en_GB.po  es.po  eu.po  fr.po  gl.po  gsynaptics-mcs-plugin.pot  id.po  it.po  ja.po  lv.po  nb_NO.po  pl.po  pt_BR.po  pt_PT.po  sq.po  uk.po  ur.po
goodies/notification-daemon-xfce/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in.in  org.freedesktop.Notifications.service.in
goodies/notification-daemon-xfce/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  lv.po  nb_NO.po  nl.po  notification-daemon-xfce.pot  pl.po  pt_BR.po  pt_PT.po  sq.po  uk.po  ur.po
goodies/verve-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  README  THANKS  TODO  autogen.sh  configure.in.in
goodies/verve-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  eu.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  lv.po  nb_NO.po  nl.po  pa.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sq.po  uk.po  ur.po  verve-plugin.pot  vi.po  zh_TW.po
goodies/xfce4-diskperf-plugin/trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in.in
goodies/xfce4-diskperf-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eu.po  fr.po  gl.po  id.po  lv.po  nb_NO.po  pl.po  pt_BR.po  pt_PT.po  sq.po  uk.po  ur.po  xfce4-diskperf-plugin.pot  zh_CN.po
goodies/xfce4-quicklauncher-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  TODO  configure.ac
goodies/xfce4-quicklauncher-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  ar.po  ca.po  cs.po  da.po  el.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  ja.po  lv.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sq.po  uk.po  ur.po  vi.po  xfce4-quicklauncher-plugin.pot
goodies/xfce4-radio-plugin/trunk/: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.in.in
goodies/xfce4-radio-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  ja.po  lv.po  nl.po  pl.po  pt_BR.po  pt_PT.po  sq.po  uk.po  ur.po  xfce4-radio-plugin.pot  zh_TW.po
goodies/xfce4-sensors-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  README  TODO  autogen.sh  configure.in.in  xfce4-sensors-plugin.spec.in
goodies/xfce4-sensors-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  ja.po  ko.po  lt.po  lv.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sq.po  uk.po  ur.po  vi.po  xfce4-sensors-plugin.pot  zh_TW.po
goodies/xfce4-smartpm-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.in.in  description-pak
goodies/xfce4-smartpm-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  en_GB.po  fr.po  gl.po  id.po  lv.po  pt_BR.po  pt_PT.po  sv.po  uk.po  ur.po  xfce4-smartpm-plugin.pot
goodies/xfce4-volstatus-icon/trunk/: ChangeLog  Makefile.am  README  TODO  configure.ac.in
goodies/xfce4-volstatus-icon/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  el.po  en_GB.po  fr.po  gl.po  hu.po  id.po  ja.po  lv.po  pl.po  pt_BR.po  pt_PT.po  ru.po  ur.po  xfce4-volstatus-icon.pot
goodies/xfce4-wavelan-plugin/trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.in.in
goodies/xfce4-wavelan-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  ca.po  cs.po  da.po  de.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb_NO.po  pl.po  pt_BR.po  pt_PT.po  sq.po  uk.po  ur.po  vi.po  xfce4-wavelan-plugin.pot
goodies/xfce4-websearch-plugin/trunk/: Makefile.am  autogen.sh  configure.ac
goodies/xfce4-websearch-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  ja.po  lv.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sq.po  uk.po  ur.po  vi.po  xfce4-websearch-plugin.pot  zh_TW.po
goodies/xfce4-xmms-plugin/trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.in.in  xfce4-xmms-plugin.spec.in
goodies/xfce4-xmms-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  en_GB.po  eu.po  fr.po  gl.po  hu.po  id.po  ja.po  ko.po  lt.po  lv.po  pl.po  pt_BR.po  pt_PT.po  sq.po  tr.po  uk.po  ur.po  vi.po  xfce4-xmms-plugin.pot
goodies/xfmedia-remote-plugin/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
goodies/xfmedia-remote-plugin/trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  cs.po  da.po  fi.po  gl.po  id.po  ja.po  (+3 more)
xfce/libxfce4util/trunk/: Makefile.am  README  autogen.sh  configure.in.in
xfce/libxfcegui4/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in.in  libxfcegui4.spec.in
xfce/squeeze/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.in.in  squeeze.desktop.in  squeeze.tap
xfce/xfcalendar/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.in.in  org.xfce.orage.service.in  xfcalendar.desktop.in  xfcalendar.spec.in
xfce/xfce4-icon-theme/trunk/: ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in.in  xfce4-icon-theme-1.0.pc.in  xfce4-icon-theme.spec.in
xfce/xfce4-settings/trunk/: Makefile.am
xfce/xfce4-trigger-launcher/trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.in.in  xfce4-trigger-launcher.spec.in
xfce/xfmedia/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.plugins  README.remote  TODO  autogen.sh  configure.ac.in  xfmedia.desktop.in  xfmedia.spec.in
xfce/xfprint/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in.in  xfprint.spec.in
(+727 files in other folders)
